// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure AWS Credentials add new profile if credentials file already exists 1`] = `
"[profile test-profile]
region=fake-region-1
aws_access_key=STS-AWS-ACCESS-KEY-ID
aws_secret_access_key=STS-AWS-SECRET-ACCESS-KEY
aws_session_token=STS-AWS-SESSION-TOKEN
"
`;

exports[`Configure AWS Credentials add new profile if credentials file already exists 2`] = `
"[test-profile]
region=fake-region-1
aws_access_key=STS-AWS-ACCESS-KEY-ID
aws_secret_access_key=STS-AWS-SECRET-ACCESS-KEY
aws_session_token=STS-AWS-SESSION-TOKEN
"
`;

exports[`Configure AWS Credentials only role arn and region provided to use GH OIDC Token 1`] = `
"[profile test-profile]
region=fake-region-1
aws_access_key=STS-AWS-ACCESS-KEY-ID
aws_secret_access_key=STS-AWS-SECRET-ACCESS-KEY
aws_session_token=STS-AWS-SESSION-TOKEN
"
`;

exports[`Configure AWS Credentials only role arn and region provided to use GH OIDC Token 2`] = `
"[test-profile]
region=fake-region-1
aws_access_key=STS-AWS-ACCESS-KEY-ID
aws_secret_access_key=STS-AWS-SECRET-ACCESS-KEY
aws_session_token=STS-AWS-SESSION-TOKEN
"
`;

exports[`Configure AWS Credentials use profile and save credentials file 1`] = `
"testpayload=true

[profile test-profile]
region=fake-region-1
aws_access_key=STS-AWS-ACCESS-KEY-ID
aws_secret_access_key=STS-AWS-SECRET-ACCESS-KEY
aws_session_token=STS-AWS-SESSION-TOKEN
"
`;

exports[`Configure AWS Credentials use profile and save credentials file 2`] = `
"testpayload=true

[test-profile]
region=fake-region-1
aws_access_key=STS-AWS-ACCESS-KEY-ID
aws_secret_access_key=STS-AWS-SECRET-ACCESS-KEY
aws_session_token=STS-AWS-SESSION-TOKEN
"
`;
